FIxed the problem

--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<title>Tea Table</title>
-	<link rel="stylesheet"  href="teatable.css">
+	<link rel="stylesheet" href="teatable.css">
 </head>
+
 <body>
-	<div>
-		<a href="teable.html"><img src="img/startbutton.png"></a>
+	<div id="teapic">
+		<a href="teable.html"></a>
 	</div>
-	<img id = "teapic" src="img/startpic.png" alt="tea">
 </body>
+
 </html>
