--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div id="teapic">
-		<a href="./teatable.html"></a>
+		<a href="./Teatable.html"></a>
 	</div>
 	<footer>
 		<p>Yichi (Lyric) Liu | lyricliu@gatech.edu | LIU TWINE EXERCISE</p>
