--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Tea Table</title>
-	<link rel="stylesheet"  href="teatable.css">
+	<link rel="stylesheet" href="teatable.css">
 </head>
 <body>
-	<div>
-		<a href="teable.html"><img src="img/startbutton.png"></a>
+	<div id="teapic">
+		<a href="./teatable.html"></a>
 	</div>
-	<img id = "teapic" src="img/startpic.png" alt="tea">
+	<footer>
+		<p>Yichi (Lyric) Liu | lyricliu@gatech.edu | LIU TWINE EXERCISE</p>
+	</footer>
 </body>
 </html>
