--- a/index.html
+++ b/index.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-	<title>Tea Table</title>
-	<link rel="stylesheet" href="teatable.css">
+    <meta charset="UTF-8">
+    <title>Tea Table</title>
+    <link rel="stylesheet" href="teatable.css">
 </head>
+
 <body>
-	<div id="teapic">
-		<a href="./Teatable.html"></a>
-	</div>
-	<footer>
-		<p>Yichi (Lyric) Liu | lyricliu@gatech.edu | LIU TWINE EXERCISE</p>
-	</footer>
+    <div id="teapic">
+        <a href="./test.html"></a>
+        <section>
+        <p id="small">An interative story about Chinese tea culture.</p>
+        <p>Yichi (Lyric) Liu | lyricliu@gatech.edu | LIU TWINE EXERCISE </p>
+    </section>
+    </div>
+    
 </body>
+
 </html>
