--- a/test.html
+++ b/test.html
@@ -9,23 +9,23 @@
 
 <body>
     <div id="enterName">
-        <p>Let's back to 80th century and you owned an elegent teashop named Chaji. </p>
+        <p>Let's back to 18th century and you owned an elegent teashop named Chaji. </p>
         <p>
             You are a energetic tea fanatic and you always happily chat with people coming from all over the world while brewing tea for them. Buying a tea is never rushed, a purchase involves plenty of tasting and leisurely conversation.
         </p>
-        <p>Your goal is brewing delicious and healthisest tea according to your customers while bring them into a cultural world filled with sensory pleasures. </p>
-        <p>Okay, at the begining, please choice a client you want to serve with.</P>
+        <p>Your goal is brewing delicious and healthisest tea for your customers while bring them into a cultural world filled with sensory pleasures. </p>
+        <p>Okay, at the begining, please chooce a guest you want to serve with.</P>
         <p id="addPeople"></p>
         <p id="selectP"></p>
     </div>
     <div id="peoplePic">
-        <div onMouseover="addword('Alice is a farmowner from Swizerland, she is generous, kind and beatiful. She enjoy spending time with horses, cows and lambs.')" onMouseout="deleteword()" onClick="selectPeople('a')"><img src="./img/women1.png" alt="women1">
+        <div onMouseover="addword('Alice is a farmowner from Swizerland, she is generous, kind and beatiful. She is good at making desserts. She has bare knowledge about Chinese tea.')" onMouseout="deleteword()" onClick="selectPeople('a')"><img src="./img/women1.png" alt="women1">
             <label>Alice</label>
         </div>
-        <div onMouseover="addword('Mr Li is a merchant who sells silk from south of the Yangtze River to central plains China. He made a fortune last week for silk transaction')" onMouseout="deleteword()" onClick="selectPeople('b')"><img src="./img/man1.png" alt="man">
+        <div onMouseover="addword('Mr Li is a merchant who sells silk from south of Yangtze river all the way north. He is very picky about brewing tea for he is a real expert in tea culture. ')" onMouseout="deleteword()" onClick="selectPeople('b')"><img src="./img/man1.png" alt="man">
             <label>Li</label>
         </div>
-        <div onMouseover="addword('Miss Qin loves music, she spend a lot of leisure time play traditional Chinese instrument Erhu. She is very outgoing and talkative.')" onMouseout="deleteword()" onClick="selectPeople('c')"><img src="./img/women2.png" alt="women2">
+        <div onMouseover="addword('Miss Qin is a Chinese young lady who spend a lot of leisure time researching health issues. Recently, she focus on the health benefits of tea-drinking.')" onMouseout="deleteword()" onClick="selectPeople('c')"><img src="./img/women2.png" alt="women2">
             <label>Qin</label>
         </div>
     </div>
@@ -50,14 +50,18 @@
                 var c = document.createElement('a');
                 c.setAttribute('href', 'teatable.html');
                 c.setAttribute('color', '#2d2350');
-                c.innerHTML = 'Cook a tea for him';
+                c.innerHTML = ' Cook a tea for him';
                 b.appendChild(c);
         	}else if(x == 'a' || x == 'c'){
         		b.innerHTML = "Alright, your guest comes.";
                 var c = document.createElement('a');
-                c.setAttribute('href', 'teatable.html');
+                if(x == 'a'){
+                   c.setAttribute('href', './Alice/askForTea.html'); 
+               }else{
+                   c.setAttribute('href', 'teatable.html');
+               }
                 c.setAttribute('color', '#2d2350');
-                c.innerHTML = 'Cook a tea for her';
+                c.innerHTML = ' Cook a tea for her';
                 b.appendChild(c);
         	}
         	
