small edit for stove

--- a/Alice/askForTea.html
+++ b/Alice/askForTea.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="Alice.css">
 </head>
 <body>
-	<div>
+	<div class="bigImage">
 		<img src="./img/alice.png">
 	</div>
 	<section class="Text">
