--- a/Alice/askForTea.html
+++ b/Alice/askForTea.html
@@ -1,22 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-	<title>askForTea</title>
-	<link rel="stylesheet" type="text/css" href="Alice.css">
+    <meta charset="UTF-8">
+    <title>askForTea</title>
+    <link rel="stylesheet" type="text/css" href="Alice.css">
 </head>
+
 <body>
-	<div class="bigImage">
-		<img src="./img/alice.png">
-	</div>
-	<section class="Text">
-		<p>A young lady sit down with a warm smile, 'nice to meet you. I am Alice.'</p>
-		<p>She has light yellow hair and beautiful hands with long fingers. She wears a traditional blue skirt with embrodidered white sleves which makes her pretty elegent.</p>
-		<p>'Nice to meet you, what kind of tea do you want to taste?' you ask.</p>
-		<p>'Um, actually I have no idea.' Alice look at you with her blue eyes, 'Its my first time to teashop, do you have any recommendation?'</p>
-		<p>'Alright, my lady', you say 'let me prepare the best tea in my shop for you.'</p><br>
-		<a href="./stove.html">You turn to the stove to heat the water.</a><br><br>
-		<a href="">You turn to the tea box to get some tea leaves.</a>
-	</section>
+    <section>
+        <div class="bigImage">
+            <img src="./img/alice.png">
+        </div>
+        <div class="Text">
+            <p>A young lady sit down with a warm smile, 'nice to meet you. I am Alice.'</p>
+            <p>She has light yellow hair and beautiful hands with long fingers. She wears a traditional blue skirt with embrodidered white sleves which makes her pretty elegent.</p>
+            <p>'Nice to meet you, what kind of tea do you want to taste?' you ask.</p>
+            <p>'Um, actually I have no idea.' Alice look at you with her blue eyes, 'Its my first time to teashop, do you have any recommendation?'</p>
+            <p>'Alright, my lady', you say 'let me prepare the best tea in my shop for you.'</p>
+            <br>
+            <a href="./stove.html">You turn to the stove to heat the water.</a>
+            <br>
+            <br>
+            <a href="">You turn to the tea box to get some tea leaves.</a>
+        </div>
+    </section>
+    <aside>
+        <p>Your Tea Sets:</p>
+        <div id="add">
+        </div>
+    </aside>
+     <script type="text/javascript" src="../Aside-control.js"></script>
 </body>
+
 </html>
