--- a/Alice/stove.html
+++ b/Alice/stove.html
@@ -8,17 +8,25 @@
 </head>
 
 <body>
-    <section class="Text btext">
-        <p>You fill a pottery kattle with well water and gently place it on the heating stove.'Just a couple minutes, sir' you say.</p>
-        <p>'Nevermind' Alice smile with his eye fixed on the kattle,'What an exquisite kattle, where did you get it?'</p>
-        <p>'Oh, I got it in a very small village in Sichuan. It's a fantastic journey. You know, Chinese tea is mostly small-scale village handicraft. So during the tea harvest. I went to a village which is famous for Puer to get some best tea. For I helped farmers select and pinch off tea leaves, they brought me to their house to experience the process of tea make. And it was then, an antique kettle caught my eye. And I bought it from farmer's hand. He told me his father left this kettle for him.' you said.</p>
-        <p>'You are so lucky! I was wondering where to find such a classic style kettle' she said, 'by the way, I am very curious about the tea make, could you tell me more about it?'</p>
-        <p>'Actually, they heated tea leaves with charcoal in fiery woks and then vigilantly tended piles of oxidizing leaves. They told me they need periodical heated these leaves and make them dry', you say 'oops, it’s boiling now.'</p>
-        <div id="stove-add"></div>
+    <section>
+        <div class="Text btext">
+            <p>You fill a pottery kattle with well water and gently place it on the heating stove.'Just a couple minutes, sir' you say.</p>
+            <p>'Nevermind' Alice smile with his eye fixed on the kattle,'What an exquisite kattle, where did you get it?'</p>
+            <p>'Oh, I got it in a very small village in Sichuan. It's a fantastic journey. You know, Chinese tea is mostly small-scale village handicraft. So during the tea harvest. I went to a village which is famous for Puer to get some best tea. For I helped farmers select and pinch off tea leaves, they brought me to their house to experience the process of tea make. And it was then, an antique kettle caught my eye. And I bought it from farmer's hand. He told me his father left this kettle for him.' you said.</p>
+            <p>'You are so lucky! I was wondering where to find such a classic style kettle' she said, 'by the way, I am very curious about the tea make, could you tell me more about it?'</p>
+            <p>'Actually, they heated tea leaves with charcoal in fiery woks and then vigilantly tended piles of oxidizing leaves. They told me they need periodical heated these leaves and make them dry', you say 'oops, it’s boiling now.'</p>
+            <div id="stove-add"></div>
+        </div>
+        <div class="bigImage bimg">
+            <img src="./img/stove.png">
+        </div>
     </section>
-    <div class="bigImage bimg">
-        <img src="./img/stove.png">
-    </div>
+    <aside>
+        <p>Your Tea Sets:</p>
+        <div>
+            
+        </div>  
+    </aside>
 </body>
 
 </html>
