--- a/Alice/askForTea.html
+++ b/Alice/askForTea.html
@@ -22,7 +22,7 @@
             <a href="./stove.html">You turn to the stove to heat the water.</a>
             <br>
             <br>
-            <a href="">You turn to the tea box to get some tea leaves.</a>
+            <a href="./teaBox.html">You turn to the tea box to get some tea leaves.</a>
         </div>
     </section>
     <aside>
