--- a/Alice/stove.html
+++ b/Alice/stove.html
@@ -23,10 +23,13 @@
     </section>
     <aside>
         <p>Your Tea Sets:</p>
-        <div>
+        <div id="add">
             
         </div>  
     </aside>
+    <script type="text/javascript" src="../Aside-control.js">
+        getStove = true;
+    </script>
 </body>
 
 </html>
