--- a/Alice/stove.html
+++ b/Alice/stove.html
@@ -22,7 +22,7 @@
         </div>
     </section>
     <aside>
-        <p>Your Tea Sets:</p>
+        <h1>Your Tea Sets:</h1>
         <div id="add">
             
         </div>  
