--- a/Alice/teaBox.html
+++ b/Alice/teaBox.html
@@ -26,7 +26,7 @@
         </div>
     </section>
     <aside>
-        <p>Your Tea Sets:</p>
+        <h1>Your Tea Sets:</h1>
         <div id="add">
             
         </div>  
