--- a/Alice/askForTea.html
+++ b/Alice/askForTea.html
@@ -29,6 +29,7 @@
         <h1>Your Tea Sets:</h1>
         <div id="add">
         </div>
+        <div id="alreadyAdd"></div>
     </aside>
      <script type="text/javascript" src="../Aside-control.js"></script>
 </body>
