--- a/Alice/reward.html
+++ b/Alice/reward.html
@@ -16,8 +16,7 @@
             <p>'Do you like the tea?' you ask with a smile. </p>
             <p> 'Definitely! It smells good and taste a little bit bitter but I like this savor. I am wondering it would be better if we have some desserts.' Alice reply. </p>
             <p>'You are right' you say, 'the problem is I have no idea how to cook desserts.' </p>
-            <p>'No, you should not worry about that', Alice get two traditional Chinese <span id="click-item">desserts</span> out of her bag, 'I just bought these before I come to your teashop, we could share them.'
-            </p>
+            <p>'No, you should not worry about that', Alice get two traditional Chinese <label id="click-item" onClick = "addItem('../item-pic/6.png', 'Desserts')">desserts</label> out of her bag, 'I just bought these before I come to your teashop, we could share them.'</p>
             <p>'Oh, thanks!' you say. </p>
             <p> ‘I have a question.’ Alice ask while cipping the tea, ‘what is good tea?’ </p>
             <p>'Well, that's a good question' you reply, 'I think the answer is quiet simple’ you explain, ‘it should be memorable. If you are still thinking about it after you finish drinking it. It must be pretty good.' </p>
@@ -32,6 +31,7 @@
         <h1>Your Tea Sets:</h1>
         <div id="add">
         </div>
+        <div id="alreadyAdd"></div>
     </aside>
     <script type="text/javascript" src="../Aside-control.js">
     getDesert = true;
