--- a/Alice/stove.html
+++ b/Alice/stove.html
@@ -23,9 +23,9 @@
     </section>
     <aside>
         <h1>Your Tea Sets:</h1>
-        <div id="add">
-            
+        <div id="add">     
         </div>  
+        <div id="alreadyAdd"></div>
     </aside>
     <script type="text/javascript" src="../Aside-control.js">
         getStove = true;
