--- a/Alice/teaBox.html
+++ b/Alice/teaBox.html
@@ -20,16 +20,16 @@
             <p>‘It’s true’ Alice reply.</p>
             <p>You open the green tea box and pick a spoon of tea out.</p>
             <div id="teaBox-add">
-                <a href="">You add some tea leaves to Cha Hu</a><br><br>
+                <a href="./chaHu.html">You add some tea leaves to Cha Hu</a><br><br>
                 <a href="">You add some tea leaves to Cha Hai</a>
             </div>
         </div>
     </section>
     <aside>
         <h1>Your Tea Sets:</h1>
-        <div id="add">
-            
+        <div id="add">    
         </div>  
+        <div id="alreadyAdd"></div>
     </aside>
     <script type="text/javascript" src="../Aside-control.js">
         getTeaBox = true;
