--- a/Alice.html
+++ b/Alice.html
@@ -135,9 +135,50 @@
                 <p>'Almost forgotten, I should boil water first.' you say,'I apologize it, I miss the step to warm the teapot.'</p>
                 <a onClick = "stoveAlice()">You turn to stove and boil water</a>
             </div>
-            
         </div>
     </section>
+    </div>
+
+    <div id="pinMingBei">
+        <section>
+        <div class="bigImage">
+            <img src="./img/pinMingBei.png">
+        </div>
+        <div class="Text etext">
+                <p>'You can taste it now' You pose a friendly gesture.</p>
+                <p>‘Wow, I just recognized how complicated it is to cook a tea. I often disappointed by the result when I brew tea leaves in an oversized pot using water heated to boiling. I really appreciate your tea knowledge.’ Alice say while lift the Pin Ming Bei and sip a tea.</p>
+                <div>
+                     <a onClick="rewardAlice()">Ask her about the taste of your tea.</a><br><br>
+                     <a onClick="checkAlice()">Check the process to make sure you did right.</a>
+                </div>
+        </div>
+    </section>
+    </div>
+
+    <div id="reward">
+        <section>
+        <div class="bigImage">
+            <img src="./img/desert.png">
+        </div>
+        <div class="Text ctext">
+            <p>'Do you like the tea?' you ask with a smile. </p>
+            <p> 'Definitely! It smells good and taste a little bit bitter but I like this savor. I am wondering it would be better if we have some desserts.' Alice reply. </p>
+            <p>'You are right' you say, 'the problem is I have no idea how to cook desserts.' </p>
+            <p>'No, you should not worry about that', Alice get two traditional Chinese <label id="click-item" onClick = "addItem('./item-pic/6.png', 'Desserts')">desserts</label> out of her bag, 'I just bought these before I come to your teashop, we could share them.'</p>
+            <p>'Oh, thanks!' you say. </p>
+            <p> ‘I have a question.’ Alice ask while cipping the tea, ‘what is good tea?’ </p>
+            <p>'Well, that's a good question' you reply, 'I think the answer is quiet simple’ you explain, ‘it should be memorable. If you are still thinking about it after you finish drinking it. It must be pretty good.' </p>
+            <p>'It's truely memorable! I mean, it's the best tea I ever have!'</p>
+            <div>
+                <a onClick="checkAlice()">'Thanks for your appreciation, let me check my process.'you reply.</a>
+            </div>
+        </div>
+    </section>
+    </div>
+
+    <div id="check">
+        <h1>Your process is:</h1>
+        <div id="yourProcess"></div>
     </div>
     
     <aside>
@@ -145,6 +186,7 @@
         <div id="add">
         </div>
         <div id="alreadyAdd"></div>
+        <div id="checkProcess"></div>
     </aside>
      <script type="text/javascript" src="./Aside-control.js"></script>
 </body>
