add css animation

--- a/Alice.html
+++ b/Alice.html
@@ -78,7 +78,7 @@
         <section>
         <div class="Text dtext">
             <div id="chaHu1">
-                <p>'Almost forgotten, I should boil water first.' you say,'I apologize it, I miss the step to warm the teapot.'</p>
+                <p>'Almost forgotten, I should boil water first.' you say,'I apologize it, I miss the step to warm the teapot.'</p><br><br>
                 <a onClick = "stoveAlice()">You turn to stove and boil water</a>
             </div>
             <div id = "chaHu2">
@@ -87,7 +87,7 @@
                 <p>‘You are right. This purple sand clay is so pleasant to touch that the pot does not need a glaze.’</p>
                 <p>'Oh, it's interesting.' Alice touch the Cha Hu with her slender fingers.</p>
                 <p>Then you fill Cha Hu with water from kettle and wash the tea set with the first tea. 'As you see, all my tea sets are pretty small. Following the warming process, the tea inside will remain hot longer as it sits’</p>
-                <p>You refill the pot, 'just three minutes, and there will come our first tea.'</p>
+                <p>You refill the pot, 'just three minutes, and there will come our first tea.'</p><br>
                 <a onClick = "pinMingBeiAlice()">Tea is ready, you pour the liquid into Drinking cup.</a>
                 <br>
                 <br>
