--- a/test.html
+++ b/test.html
@@ -48,7 +48,7 @@
         	if(x == 'b'){
         		b.innerHTML = "Alright, your guest comes.";
                 var c = document.createElement('a');
-                c.setAttribute('href', 'teatable.html');
+                c.setAttribute('href', './Li.html');
                 c.setAttribute('color', '#2d2350');
                 c.innerHTML = ' Cook a tea for him';
                 b.appendChild(c);
