--- a/Li.html
+++ b/Li.html
@@ -107,6 +107,48 @@
     </section>
     </div>
 
+    <div id="drink">
+        <section>
+        <div class="bigImage">
+            <img src="./img/pinMingBei.png">
+        </div>
+        <div class="Text ctext">
+            <div>
+            	<p>‘We could taste the tea now’, you smell to Mr. Li ‘note the color and fragrance of the liquid, what a good tea!’</p>
+            	<p>‘Yep, but don’t hurry’, Mr. Li reply, ‘your drink should deliberate and thoughtful.’ </p>
+            	<p>Mr. Li attentively sip the brew, contemplating the various component flavors and taste the liquid in different parts of the mouth.'I love this experience' he say.</p>
+            	<p>After the tea, Mr. Li about to leave.</p>
+            </div><br>
+            <div>
+                <a onClick = "teaPetLi()">Keep him, rebrew a tea for him.</a><br><br>
+                <a href="./test.html">Say goodbye to him and serve another guest.</a>
+            </div>
+        </div>
+    </section>
+    </div>
+
+    <div id="teaPet">
+        <section>
+        <div class="bigImage">
+            <img src="./img/teaPet.png">
+        </div>
+        <div class="Text ctext">
+            <div>
+            	<p>You add more water to the pot and repeat the brewing process 'Just one more cup, friend.' you say.</p>
+            	<p>‘Well, well’ Mr. Li reply and drink the second tea. </p>
+            	<p>'Before I leave, I have a final <label id="click-item" onClick = "addItem('./item-pic/10.png', 'Tea Pet')">gift</label> for you.’ Mr. Li hands you a very small wooden box, ‘you could open it now.'</p>
+            	<p>You open the wooden box, a turtle carved from wood sit in the red silk cushion. 'It’s amazingly beautiful, but what is this?' you ask.</p>
+            	<p>'It's tea pet made of a special wood, you could pour the residual liquid onto it, and it's color will change.' Mr. Li reply.</p>
+            	<p>'Thanks a lot, I have never seen such an interesting gift!' you smile.</p>
+            </div><br>
+            <div>
+                <a href="./test.html">Say goodbye to him and serve another guest.</a>
+            </div>
+        </div>
+    </section>
+    </div>
+
+
 
 
 	    <aside>
