--- a/Alice.html
+++ b/Alice.html
@@ -180,7 +180,8 @@
         <h1>Your process is:</h1>
         <div id="yourProcess"></div><br>
         <div>
-            <a onClick="backAlice()">Go back and serve other guests</a>
+            <a onClick="backAlice()">Go back and serve Alice once more.</a><br><br>
+            <a href="./test.html">Go back and serve other guests</a>
         </div>
     </div>
     
