--- a/Alice.html
+++ b/Alice.html
@@ -14,7 +14,7 @@
             </div>
             <div class="Text">
                 <p>A young lady sit down with a warm smile, 'nice to meet you. I am Alice.'</p>
-                <p>She has light yellow hair and beautiful hands with long fingers. She wears a traditional blue skirt with embrodidered white sleves which makes her pretty elegent.</p>
+                <p>She has light yellow hair and beautiful hands with long fingers. Her blue eyes not far off the colour of the sea itself. She wears a traditional blue skirt with embrodidered white sleves which makes her pretty elegent.</p>
                 <p>'Nice to meet you, what kind of tea do you want to taste?' you ask.</p>
                 <p>'Um, actually I have no idea.' Alice look at you with her blue eyes, 'Its my first time to teashop, do you have any recommendation?'</p>
                 <p>'Alright, my lady', you say 'let me prepare the best tea in my shop for you.'</p>
