--- a/Li.html
+++ b/Li.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Mr. Li</title>
 	<link rel="stylesheet" type="text/css" href="Alice.css">
 </head>
 <body>
